[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fonts/ka1.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/UIButtons/CharButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/PlayerSprites/Glass/jump.png" type="Texture" id=3]
[ext_resource path="res://Scripts/CharsScreen.gd" type="Script" id=4]
[ext_resource path="res://Sprites/PlayerSprites/Pirate/jump.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 24
outline_size = 1
outline_color = Color( 0.484863, 0.465923, 0.465923, 1 )
font_data = ExtResource( 1 )

[node name="CharScreens" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 60.0
margin_top = 40.0
margin_right = 580.0
margin_bottom = 320.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Menu"]
margin_right = 520.0
margin_bottom = 29.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Select a character[/center]"
text = "Select a character"
fit_content_height = true

[node name="CenterRow" type="VBoxContainer" parent="Menu"]
margin_top = 33.0
margin_right = 520.0
margin_bottom = 280.0
size_flags_vertical = 3
alignment = 1

[node name="Slots" type="HBoxContainer" parent="Menu/CenterRow"]
margin_top = 116.0
margin_right = 224.0
margin_bottom = 130.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 22
alignment = 1

[node name="Normal" parent="Menu/CenterRow/Slots" instance=ExtResource( 2 )]

[node name="Glass" parent="Menu/CenterRow/Slots" instance=ExtResource( 2 )]
margin_left = 82.0
margin_right = 142.0
text = "Glass"
req_pencils = 5
char_name = "Glass"

[node name="Sprite" parent="Menu/CenterRow/Slots/Glass" index="0"]
texture = ExtResource( 3 )
hframes = 7

[node name="Pirate" parent="Menu/CenterRow/Slots" instance=ExtResource( 2 )]
margin_left = 164.0
margin_right = 224.0
text = "Pirate"
req_pencils = 10
char_name = "Pirate"

[node name="Sprite" parent="Menu/CenterRow/Slots/Pirate" index="0"]
texture = ExtResource( 5 )
offset = Vector2( 0, -8 )
hframes = 1
[connection signal="pressed" from="Menu/CenterRow/Slots/Normal" to="." method="_on_Normal_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Slots/Glass" to="." method="_on_Glass_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Slots/Pirate" to="." method="_on_Pirate_pressed"]

[editable path="Menu/CenterRow/Slots/Normal"]

[editable path="Menu/CenterRow/Slots/Glass"]

[editable path="Menu/CenterRow/Slots/Pirate"]
